--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="Emilio.png" alt="Foto de Emilio Zanoni"></td>
       <td>  <h1>Emilio Zanoni</h1>
-        <p><em>Estudiante de <strong><a href="https://www.udemy.com/home/my-courses/learning/">Desarrollo Web</a></strong>.</em></p>
+        <p><em>Estudiante de <strong><a href="https://www.udemy.com">Desarrollo Web</a></strong>.</em></p>
         <p>Soy un estudiante de Desarrollo Web, me gusta el gimnasio y leer.</p></td>
     </tr>
   </table>
